# MLOps_day10_firstproject

./: .gitignore  LICENSE  README.md  demo.py  notes.txt  projectflow.txt  prometheus.yml  pyproject.toml  requirements.txt  setup.py
notebooks/: exp-notebook.ipynb  test_mangodb_connection.ipynb
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
